Fix vertical alignment on Steps

--- a/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
+++ b/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
@@ -248,6 +248,7 @@ p {
   padding-block: 27px;
   gap: 16px;
   justify-content: flex-start;
+  align-items: center;
 
   --text--font-family: var(--font-family--neue-montreal);
   font-family: var(--font-family--neue-montreal);
